before category re-write

--- a/app/templates/admin_library.html
+++ b/app/templates/admin_library.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Library Management - Stout Requests{% endblock %}
+{% block title %}Library Management - CuePlex{% endblock %}
 
 {% block content %}
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
