--- a/app/templates/admin_users.html
+++ b/app/templates/admin_users.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}User Management - Stout Requests{% endblock %}
+{% block title %}User Management - CuePlex{% endblock %}
 
 {% block content %}
 <div class="px-4 py-6 sm:px-0">
