--- a/app/templates/admin_settings.html
+++ b/app/templates/admin_settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Settings - Stout Requests{% endblock %}
+{% block title %}Admin Settings - CuePlex{% endblock %}
 
 {% block content %}
 <div class="px-4 py-6 sm:px-0">
@@ -192,7 +192,7 @@
                             type="text" 
                             id="app_name"
                             name="app_name"
-                            value="{{ raw_settings.app_name or 'Stout Requests' }}"
+                            value="{{ raw_settings.app_name or 'CuePlex' }}"
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-orange-500 focus:border-orange-500"
                         >
                     </div>
