--- a/app/templates/category_settings.html
+++ b/app/templates/category_settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Category Settings - Stout Requests{% endblock %}
+{% block title %}Category Settings - CuePlex{% endblock %}
 
 {% block content %}
 <div class="max-w-4xl mx-auto py-8 px-4">
