--- a/app/templates/media_minimal.html
+++ b/app/templates/media_minimal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ media.title or media.name }} - Stout Requests</title>
+    <title>{{ media.title or media.name }} - CuePlex</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
